# Portfolio

./: .gitignore  README.md  index.html
assets/: index-BQQ8KW8D.css  index-CMGR8Q6b.js  index-otnpgXWe.js
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: blogs.py  series.py
backend/app/models/: blog.py
backend/app/schemas/: blog.py
backend/blog/: admin.py  models.py  serializers.py  urls.py  views.py
backend/blog/migrations/: 0001_initial.py  0002_blogimage.py  0003_alter_blogimage_image.py
backend/chat/: providers.py  serializers.py  services.py  tests.py  throttles.py  urls.py  views.py
backend/core/: __init__.py  logging.py  middleware.py  tests.py  views.py
backend/portfolio/: asgi.py  settings.py  urls.py  wsgi.py
backend/portfolio/settings/: base.py  dev.py  prod.py
docs/: bugs.md  django_guide.md  production-readiness-audit.md  production-refactor-roadmap.md  react_guide.md  refactor_log.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/app/: App.jsx  AppErrorBoundary.jsx  AppRouter.jsx  RouteFallback.jsx  appStatus.module.css
frontend/src/components/: BaseballGame.jsx  ChatPanel.jsx  RetroScene.jsx  SettingsDock.jsx  settingsDock.module.css
frontend/src/context/: ThemeContext.jsx
frontend/src/games/: SpaceInvaders.jsx  index.js  spaceInvaders.module.css
frontend/src/pages/: Admin.jsx  BlogPost.jsx  BlogSeries.jsx  Blogs.jsx  Home.jsx  LetsTrain.jsx  Projects.jsx  Work.jsx
(+30 files in other folders)
